force-app/main/default/objects/parametrized_claims__c/parametrized_claims__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Parametrized claims</label>
</CustomObject>