force-app/main/default/objects/parametrized_claims__c/fields/PCK_Token_Country__c.field-meta.xml
<CustomField>
    <fullName>PCK_Token_Country__c</fullName>
    <description>Código ISO para el país de destino del token. Código comodín &apos;ALL&apos; que represente a todos los paises.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token_Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>