force-app/main/default/objects/parametrized_claims__c/fields/PCK_Token_Platform__c.field-meta.xml
<CustomField>
    <fullName>PCK_Token_Platform__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token_Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>