force-app/main/default/objects/parametrized_claims__c/fields/PCK_Token_Type__c.field-meta.xml
<CustomField>
    <fullName>PCK_Token_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token_Type</label>
    <type>TextArea</type>
</CustomField>