force-app/main/default/objects/parametrized_claims__c/fields/TXT_aud__c.field-meta.xml
<CustomField>
    <fullName>TXT_aud__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>aud</label>
    <type>TextArea</type>
</CustomField>