force-app/main/default/objects/parametrized_claims__c/fields/TXT_country__c.field-meta.xml
<CustomField>
    <fullName>TXT_country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>