force-app/main/default/objects/parametrized_claims__c/fields/TXT_local_realm__c.field-meta.xml
<CustomField>
    <fullName>TXT_local_realm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>local_realm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>