force-app/main/default/objects/parametrized_claims__c/fields/TXT_local_realms__c.field-meta.xml
<CustomField>
    <fullName>TXT_local_realms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>local_realms</label>
    <type>TextArea</type>
</CustomField>