force-app/main/default/objects/parametrized_claims__c/fields/TXT_realm__c.field-meta.xml
<CustomField>
    <fullName>TXT_realm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>realm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>