force-app/main/default/objects/parametrized_claims__c/fields/TXT_sec_mode__c.field-meta.xml
<CustomField>
    <fullName>TXT_sec_mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>sec_mode</label>
    <type>TextArea</type>
</CustomField>