force-app/main/default/objects/parametrized_claims__c/fields/TXT_sub__c.field-meta.xml
<CustomField>
    <fullName>TXT_sub__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>sub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>