force-app/main/default/objects/parametrized_claims__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>PCK_Token_Country__c</columns>
    <columns>PCK_Token_Platform__c</columns>
    <columns>PCK_Token_User__c</columns>
    <columns>NAME</columns>
    <columns>TXT_sub__c</columns>
    <columns>TXT_country__c</columns>
    <columns>TXT_local_realm__c</columns>
    <columns>TXT_local_uid__c</columns>
    <columns>TXT_sec_mode__c</columns>
    <columns>TXT_aud__c</columns>
    <columns>TXT_realm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>